# climb-sync

./: .gitignore  LICENSE  README.md  README.txt  climb_sync.spec  pyproject.toml  requirements.txt
docs/: RELEASING.md
scripts/: build_exe.py
src/climb_sync/: __init__.py  __main__.py  app.py  config.py  smoke.py
src/climb_sync/dircon/: __init__.py  client.py  codec.py  discovery.py
src/climb_sync/grade/: __init__.py  source.py
src/climb_sync/lifecycle/: __init__.py  logging_setup.py  single_instance.py
src/climb_sync/sync/: __init__.py  constants.py  loop.py  smoothing.py  staleness.py
src/climb_sync/tray/: __init__.py  app.py  dialogs.py  icons.py
tests/: test_config.py  test_dircon_client.py  test_metadata.py  test_sync_loop.py  test_tray_app.py
